tests/algorithms/x/C/backtracking/word_ladder.c
// Generated by Mochi 0.10.32 on 2025-08-06 20:15 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t remove_item_len;
size_t word_ladder_len;

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char** list_append_str_new(const char **arr, size_t len, const char *val) {
    const char **res = malloc((len + 1) * sizeof(const char*));
    if (arr && len) memcpy(res, arr, len * sizeof(const char*));
    res[len] = val;
    return res;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

const char* alphabet = "abcdefghijklmnopqrstuvwxyz";

long long contains(const char* * xs, size_t xs_len, const char* x);
const char* * remove_item(const char* * xs, size_t xs_len, const char* x);
const char* * word_ladder(const char* current, const char* * path, size_t path_len, const char* target, const char* * words, size_t words_len);
void user_main();
int main(void);

long long contains(const char* * xs, size_t xs_len, const char* x) {
    long long i = 0LL;
    while (i < xs_len) {
        if (strcmp(xs[(int)(i)], x) == 0) {
            return 1LL;
        }
        i = i + 1LL;
    }
    return 0LL;
}

const char* * remove_item(const char* * xs, size_t xs_len, const char* x) {
    const char* *res = NULL;
    size_t res_len = 0;
    long long removed = 0LL;
    long long i = 0LL;
    while (i < xs_len) {
        if (!(removed) && (strcmp(xs[(int)(i)], x) == 0)) {
            removed = 1LL;
        } else {
            res = list_append_str(res, &res_len, xs[(int)(i)]);
        }
        i = i + 1LL;
    }
    return remove_item_len = res_len, res;
}

const char* * word_ladder(const char* current, const char* * path, size_t path_len, const char* target, const char* * words, size_t words_len) {
    if (strcmp(current, target) == 0) {
        return word_ladder_len = path_len, path;
    }
    long long i = 0LL;
    while (i < strlen(current)) {
        long long j = 0LL;
        while (j < strlen(alphabet)) {
            const char* c = _substring(alphabet, j, j + 1LL);
            const char* transformed = str_concat(str_concat(_substring(current, 0LL, i), c), _substring(current, i + 1LL, strlen(current)));
            if (strstr(words, transformed) != NULL) {
                const char **new_words = remove_item(words, words_len, transformed);
                size_t new_words_len = remove_item_len;
                size_t *new_words_lens = remove_item_lens;
                size_t new_words_lens_len = remove_item_len;
                const char* *new_path = list_append_str_new(path, path_len, transformed);
                size_t new_path_len = path_len + 1;
                const char* *result = word_ladder(transformed, new_path, new_path_len, target, new_words, new_words_len);
                size_t result_len = result ? strlen(result) : 0;
                if (result_len > 0LL) {
                    return word_ladder_len = result_len, result;
                }
            }
            j = j + 1LL;
        }
        i = i + 1LL;
    }
    {
        static const char* __tmp0_arr[0];
        word_ladder_len = 0;
        return __tmp0_arr;
    }
}

void user_main() {
    const char* *w1 = NULL;
    size_t w1_len = 0;
    w1 = list_append_str(w1, &w1_len, "hot");
    w1 = list_append_str(w1, &w1_len, "dot");
    w1 = list_append_str(w1, &w1_len, "dog");
    w1 = list_append_str(w1, &w1_len, "lot");
    w1 = list_append_str(w1, &w1_len, "log");
    w1 = list_append_str(w1, &w1_len, "cog");
    puts(str_int(word_ladder("hit", (const char*[]){ "hit" }, 1, "cog", w1, w1_len)));
    const char* *w2 = NULL;
    size_t w2_len = 0;
    w2 = list_append_str(w2, &w2_len, "hot");
    w2 = list_append_str(w2, &w2_len, "dot");
    w2 = list_append_str(w2, &w2_len, "dog");
    w2 = list_append_str(w2, &w2_len, "lot");
    w2 = list_append_str(w2, &w2_len, "log");
    puts(str_int(word_ladder("hit", (const char*[]){ "hit" }, 1, "cog", w2, w2_len)));
    const char* *w3 = NULL;
    size_t w3_len = 0;
    w3 = list_append_str(w3, &w3_len, "load");
    w3 = list_append_str(w3, &w3_len, "goad");
    w3 = list_append_str(w3, &w3_len, "gold");
    w3 = list_append_str(w3, &w3_len, "lead");
    w3 = list_append_str(w3, &w3_len, "lord");
    puts(str_int(word_ladder("lead", (const char*[]){ "lead" }, 1, "gold", w3, w3_len)));
    const char* *w4 = NULL;
    size_t w4_len = 0;
    w4 = list_append_str(w4, &w4_len, "came");
    w4 = list_append_str(w4, &w4_len, "cage");
    w4 = list_append_str(w4, &w4_len, "code");
    w4 = list_append_str(w4, &w4_len, "cade");
    w4 = list_append_str(w4, &w4_len, "gave");
    puts(str_int(word_ladder("game", (const char*[]){ "game" }, 1, "code", w4, w4_len)));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
